frontend/tests/cases/negative/simple/bool.gr
data Bool where
  True : Int; -- â† This should be `Bool`
  False : Int
